alteracao no css

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             essenciais para a web: <span>HTML, CSS, JavaScript e React</span>.
           </p>
           <div class="btn-box">
-            <a class="btn">Linkedin</a>
-            <a class="btn">GitHub</a>
+            <a class="btn btn-linkedin">Linkedin</a>
+            <a class="btn btn-github">GitHub</a>
           </div>
           <div class="footer-inicio">
             <a href="#" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
