alteracao no css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header id="header">
       <h1><a href="#">MVSL</a></h1>
       <nav>
-        <a href="#">Inicio</a>
+        <a id="inicio" href="#">Inicio</a>
         <a href="#">Sobre</a>
         <a href="#">Habilidades</a>
         <a href="#">Projetos</a>
@@ -51,6 +51,9 @@
         </div>
       </section>
     </section>
+
+      
+
     <script
       src="https://kit.fontawesome.com/e73512d98f.js"
       crossorigin="anonymous"
