criacao da tela sobre

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1><a href="#">MVSL</a></h1>
       <nav>
         <a id="inicio" href="#">Inicio</a>
-        <a href="#">Sobre</a>
+        <a href="#sobre">Sobre</a>
         <a href="#">Habilidades</a>
         <a href="#">Projetos</a>
         <a href="#">Contato</a>
@@ -51,8 +51,42 @@
         </div>
       </section>
     </section>
-
       
+    <section class="section-sobre" id="sobre">
+      <h1>Sobre <span>mim</span></h1>
+      <div class="img-astronauta">
+        <img src="./img/Astronauta.png" alt="">
+      </div>
+      <div class="text-sobre">
+        <h3>Desenvolvedor Frontend!</h3>
+
+        <p><b>Sou um dedicado programador Front-End</b> especializado nas tecnologias essenciais para a web:
+            <b><span> HTML, CSS e JavaScript.</span></b> Com uma paixão ardente pela criação de
+            interfaces intuitivas e responsivas, que proporcionam uma experiência excepcional aos usuários em
+            todos os dispositivos.<br><br><br>
+
+            Além das habilidades técnicas, trago uma abordagem colaborativa e uma mentalidade focada em
+            resultados.
+            Sou capaz de trabalhar em equipe de forma eficaz, colaborando com <span>designers,</span>
+            desenvolvedores e partes interessadas para alcançar os objetivos do projeto. Minha
+            <span>comunicação clara</span></b>
+            e habilidades de resolução de problemas me permitem enfrentar desafios complexos e encontrar soluções
+            criativas.<br><br><br>
+
+            Como <span>programador Front-End</span>, sou movido pela busca constante de aprimoramento e aprendizado
+            contínuo. Sempre me mantenho atualizado com as mais recentes tendências e melhores práticas do
+            setor, garantindo que meus projetos estejam alinhados com os mais altos padrões de qualidade e
+            usabilidade.<br><br><br>
+
+            Com habilidades sólidas em <b> <span>HTML, CSS e JavaScript</span></b>, tenho a capacidade de dar vida a
+            designs elegantes e funcionais. Utilizo minha <b><span>criatividade</span></b> e conhecimento.
+        </p>
+
+        <div class="btn-box bt-box-sobre">
+            <a href="#contate-me" class="btn btn-linkedin" id="btn-mais">Mais informações.</a>
+        </div>
+    </div>
+    </section>
 
     <script
       src="https://kit.fontawesome.com/e73512d98f.js"
