criacao da tela habilidades

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a id="inicio" href="#">Inicio</a>
         <a href="#sobre">Sobre</a>
-        <a href="#">Habilidades</a>
+        <a href="#habilidades">Habilidades</a>
         <a href="#">Projetos</a>
         <a href="#">Contato</a>
       </nav>
@@ -87,6 +87,93 @@
         </div>
     </div>
     </section>
+
+    <section class="skills" id="habilidades">
+      <h2 class="heading">Minhas <span>Habilidades</span></h2>
+
+      <div class="skills-row">
+          <div class="skills-column">
+              <h3 class="title">Habilidades</h3>
+
+              <div class="skills-box">
+                  <div class="skills-content">
+                      <div class="progress">
+                          <h3>HTML <span>100%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+
+                      <div class="progress">
+                          <h3>CSS <span>90%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+
+                      <div class="progress">
+                          <h3>JAVASCRIPT <span>79%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+
+                      <div class="progress">
+                          <h3>GITHUB <span>95%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+
+                      <div class="progress">
+                          <h3>NODE.JS <span>55%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+
+                      <div class="progress">
+                          <h3>REACT <span>60%</span></h3>
+                          <div class="bar"><span></span></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+      </div>
+
+      <div class="about-skills">
+
+          <div class="box-about-skills">
+              <p id="html"><i class="fa-brands fa-html5"></i></p>
+              <p><span>HTML</span></p>
+              <p> Linguagem de marcação para estruturar o conteúdo da página.</p>
+          </div>
+
+          <div class="box-about-skills">
+              <p id="css"><i class="fa-brands fa-css3-alt"></i></p>
+              <p><span>CSS</span></p>
+              <p> Linguagem de estilo para controlar a aparência e o layout dos elementos HTML. </p>
+          </div>
+
+          <div class="box-about-skills">
+              <p id="javascript"><i class="fa-brands fa-js"></i></p>
+              <p><span>JAVASCRIPT</span></p>
+              <p> Linguagem de programação para adicionar interatividade e comportamento. </p>
+          </div>
+
+          <div class="box-about-skills">
+              <p id="github"><i class="fa-brands fa-github"></i></p>
+              <p><span>GITHUB</span></p>
+              <p>GitHub é uma plataforma de hospedagem para projetos de desenvolvimento de software.</p>
+          </div>
+
+          <div class="box-about-skills">
+              <p id="node"><i class="fa-brands fa-node-js"></i></p>
+              <p><span>NODE</span></p>
+              <p>O Node.js é um ambiente de tempo de execução de JavaScript que permite que você execute código
+                  JavaScript no lado do servidor. .</p>
+          </div>
+
+          <div class="box-about-skills">
+              <p id="react"><i class="fa-brands fa-react"></i></p>
+              <p><span>REACT</span></p>
+              <p>O React é uma biblioteca JavaScript de código aberto para construir interfaces de usuário interativas
+                  e reativas. </p>
+          </div>
+
+      </div>
+  </section>
 
     <script
       src="https://kit.fontawesome.com/e73512d98f.js"
