tela de projetos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a id="inicio" href="#">Inicio</a>
         <a href="#sobre">Sobre</a>
         <a href="#habilidades">Habilidades</a>
-        <a href="#">Projetos</a>
+        <a href="#projetos">Projetos</a>
         <a href="#">Contato</a>
       </nav>
     </header>
@@ -173,6 +173,54 @@
           </div>
 
       </div>
+  </section>
+
+  <section class="section-projetos" id="projetos">
+    <h2 class="title-projetos">Meus <span>Projetos</span></h2>
+    <div class="box-projetos">
+
+      <div class="card-projeto">
+        <p><span>Conversor de moedas</span></p>
+        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
+        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a class="btn btn-linkedin">Ver</a>
+          <a class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+      <div class="card-projeto">
+        <p><span>Conversor de moedas</span></p>
+        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
+        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a class="btn btn-linkedin">Ver</a>
+          <a class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+      <div class="card-projeto">
+        <p><span>Conversor de moedas</span></p>
+        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
+        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a class="btn btn-linkedin">Ver</a>
+          <a class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+      <div class="card-projeto">
+        <p><span>Conversor de moedas</span></p>
+        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
+        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a class="btn btn-linkedin">Ver</a>
+          <a class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+
+    </div>
   </section>
 
     <script
