arrumando os projetos

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             essenciais para a web: <span>HTML, CSS, JavaScript e React</span>.
           </p>
           <div class="btn-box">
-            <a class="btn btn-linkedin">Linkedin</a>
-            <a class="btn btn-github">GitHub</a>
+            <a href="https://www.linkedin.com/in/marcos-lauxen/" target="_blank" class="btn btn-linkedin">Linkedin</a>
+            <a href="https://github.com/marcoslauxen" target="_blank" class="btn btn-github">GitHub</a>
           </div>
           <div class="footer-inicio">
-            <a href="#" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" title="github"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/marcos-lauxen/" target="_blank" title="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/marcoslauxen" target="_blank" title="github"><i class="fa-brands fa-github"></i></a>
             <a href="#" title="curriculo"><i class="fa-solid fa-paper-plane"></i></a>
           </div>
         </div>
@@ -83,7 +83,7 @@
         </p>
 
         <div class="btn-box bt-box-sobre">
-            <a href="#contate-me" class="btn btn-linkedin" id="btn-mais">Mais informações.</a>
+            <a href="#contato" class="btn btn-linkedin" id="btn-mais">Mais informações.</a>
         </div>
     </div>
     </section>
@@ -180,49 +180,49 @@
     <div class="box-projetos">
 
       <div class="card-projeto">
-        <p><span>Conversor de moedas</span></p>
-        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
-        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <p><span>Previsão do tempo</span></p>
+        <img src="./img/previsaotempo.png" alt="projeto-conversor-de-moeda">
+        <p>Com este projeto, é possível acessar a previsão do tempo de diferentes localidades em todo o mundo. Utilizando HTML, CSS e JavaScript, desenvolvi uma página responsiva que se ajusta a uma variedade de dispositivos.</p>
         <div class="btn-box" id="btn-projetos">
-          <a class="btn btn-linkedin">Ver</a>
-          <a class="btn btn-github">Repositório</a>
+          <a href="https://lnkd.in/dWA3Wkcg" target="_blank" class="btn btn-linkedin">Ver</a>
+          <a href="https://github.com/marcoslauxen/Weather-Forecast/tree/57126e9f599abf77321fd94dccbb4d5fdca5bb7a/Previs%C3%A3o-Tempo" target="_blank" class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+      <div class="card-projeto">
+        <p><span>Adicionar notas</span></p>
+        <img src="./img/notacard.png" alt="projeto-conversor-de-moeda">
+        <p>Com este projeto, você pode criar e excluir notas de maneira fácil e intuitiva, utilizando React e Tailwind CSS. Desenvolvi uma aplicação responsiva que se adapta a uma variedade de dispositivos para gerenciamento de notas.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a href="https://lnkd.in/dMwfS4u6" target="_blank" class="btn btn-linkedin">Ver</a>
+          <a href="https://github.com/marcoslauxen/New-Note-Card" target="_blank" class="btn btn-github">Repositório</a>
+        </div>
+      </div>
+
+      <div class="card-projeto">
+        <p><span>Sorteador de números</span></p>
+        <img src="./img/sorteador de numeros1.png" alt="projeto-conversor-de-moeda">
+        <p>Com esta aplicação, você pode gerar números aleatórios de forma simples e rápida. Desenvolvida com HTML, CSS e JavaScript, a página é responsiva e pode ser acessada em diversos dispositivos.</p>
+        <div class="btn-box" id="btn-projetos">
+          <a href="https://lnkd.in/gZ_M6QHW" target="_blank" class="btn btn-linkedin">Ver</a>
+          <a href="https://github.com/marcoslauxen/random-raffle" target="_blank" class="btn btn-github">Repositório</a>
         </div>
       </div>
 
       <div class="card-projeto">
         <p><span>Conversor de moedas</span></p>
-        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
-        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
+        <img src="./img/Conversor de moedas.png" alt="projeto-conversor-de-moeda">
+        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro e dólar. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
         <div class="btn-box" id="btn-projetos">
-          <a class="btn btn-linkedin">Ver</a>
-          <a class="btn btn-github">Repositório</a>
-        </div>
-      </div>
-
-      <div class="card-projeto">
-        <p><span>Conversor de moedas</span></p>
-        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
-        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
-        <div class="btn-box" id="btn-projetos">
-          <a class="btn btn-linkedin">Ver</a>
-          <a class="btn btn-github">Repositório</a>
-        </div>
-      </div>
-
-      <div class="card-projeto">
-        <p><span>Conversor de moedas</span></p>
-        <img src="./img/image-currency-convert.png" alt="projeto-conversor-de-moeda">
-        <p>Com esse projeto, é possível converter moedas de diferentes países, como euro, dólar, bitcoin e libras. Usei HTML, CSS e JavaScript para desenvolvê-lo, e a página é responsiva, se adaptando a diferentes dispositivos.</p>
-        <div class="btn-box" id="btn-projetos">
-          <a class="btn btn-linkedin">Ver</a>
-          <a class="btn btn-github">Repositório</a>
+          <a href="https://lnkd.in/dyFKFK4k" target="_blank" class="btn btn-linkedin">Ver</a>
+          <a href="https://github.com/marcoslauxen/Currency-Converter" target="_blank" class="btn btn-github">Repositório</a>
         </div>
       </div>
 
     </div>
 
     <div class="btn-box btn-mais btn-ver-mais" id="btn-projetos">
-      <a class="btn btn-linkedin">Ver mais</a>
+      <a href="https://github.com/marcoslauxen?tab=repositories" target="_blank" class="btn btn-linkedin">Ver mais</a>
     </div>
 
   </section>
@@ -231,13 +231,13 @@
     <h2 class="text-contato">Contate - <span>Me!</span></h2>
 
     <div class="box-contato">
-      <input type="text" name="text" id="text" placeholder="Seu nome completo">
+      <input type="text" name="text" id="nome" placeholder="Seu nome completo">
       <input type="email" name="email" id="email" placeholder="Digite seu email">
-      <input type="number" name="number" id="number" placeholder="Número de telefone">
-      <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem."></textarea>
+      <input type="number" name="number" id="celular" placeholder="Número de telefone">
+      <textarea name="" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem."></textarea>
 
       <div class="btn-box btn-enviar">
-        <a class="btn btn-linkedin">Enviar</a>
+        <a class="btn btn-linkedin" id="enviar-forms">Enviar</a>
 
     </div>
 
